# branda-server

./: .firebaserc  .gitignore  Branda-server.json  docker-compose.yml  dockerfile  firestore.rules  main.py  pyproject.toml  requirements.txt
app/: main.py  router.py  test_main.py
config/: config.py  database.py  firebase.py  helper.py  langchain_helper.py
models/: business_details.py  graphql.py  models.py  schemas.py
routes/: auth_router.py  brand_router.py  router.py  user_router.py
services/: auth_handler.py  auth_service.py  brand_service.py  notification_service.py  share_service.py  user_service.py
tests/: test_langchain.py  test_main.py
utils/: db_access.py  db_seeding.py
